--- a/src/features/postGeneration/UI/styles.module.scss
+++ b/src/features/postGeneration/UI/styles.module.scss
@@ -1,8 +1,3 @@
 .button {
-  border-radius: 8px;
-  padding: 10px;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+  border: 1px solid var(--Personal-colors-main);
 }
