--- a/src/shared/ui/MyBtn/styles.module.scss
+++ b/src/shared/ui/MyBtn/styles.module.scss
@@ -38,7 +38,7 @@
     background: var(--Gradients-Gradient-2);
 
     &:hover {
-      opacity: 0.8;
+      // opacity: 0.8;
       background: var(--Gradients-Gradient-2);
     }
   }
@@ -56,7 +56,7 @@
     color: var(--Personal-colors-White);
     background: var(--Orange);
     &:hover {
-      opacity: 0.8;
+      // opacity: 0.8;
       background: var(--Orange);
     }
   }
