--- a/src/widgets/cartBlock/UI/styles.module.scss
+++ b/src/widgets/cartBlock/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-auto-flow: column;
+  grid-template: 1fr / 1fr 0.5fr;
   justify-content: space-between;
   margin-top: 50px;
   column-gap: 30px;
