--- a/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
@@ -2,27 +2,32 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 10px;
-}
 
-.filters__row {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-
-  big {
-    color: var(--Personal-colors-black);
-
-    text-align: center;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-
-  .filters {
+  .filters__row {
     display: grid;
     grid-auto-flow: column;
-    column-gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+
+    big {
+      color: var(--Personal-colors-black);
+
+      text-align: center;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
+
+    .filters {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 20px;
+    }
+  }
+
+  .card__list {
+    display: grid;
+    gap: 10px;
   }
 }
