--- a/src/widgets/createOrderBlock/UI/createOrderPayment/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderPayment/UI/styles.module.scss
@@ -2,15 +2,16 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 30px;
-  padding-top: 30px;
-  padding-bottom: 200px;
+  padding: 30px 0;
   background: var(--Gradients-Gradient-1);
 
   .content {
     display: grid;
-    grid-auto-flow: column;
+    grid-auto-flow: row;
+    gap: 10vw;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
+    height: 100%;
 
     .title {
       display: grid;
