--- a/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
+++ b/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
@@ -16,6 +16,7 @@
   text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   padding-bottom: 30px;
+  justify-items: center;
 
   svg {
     height: 150px;
@@ -104,9 +105,4 @@
   margin-top: 30px;
   display: grid;
   justify-content: stretch;
-
-  &.deactive {
-    pointer-events: none;
-    filter: grayscale(100%);
-  }
 }
