--- a/src/features/advProjectCard/UI/styles.module.scss
+++ b/src/features/advProjectCard/UI/styles.module.scss
@@ -5,12 +5,10 @@
   box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
   // border: 1px solid var(--Personal-colors-main);
   padding-top: 20px;
-  // height: 210px;
 
   .card {
     display: grid;
     grid-template: 1fr / 7.5fr 12fr 1.4fr;
-    // height: 140px;
 
     &__description {
       display: grid;
@@ -153,6 +151,30 @@
           }
         }
       }
+
+      &__icons_completed {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr;
+        column-gap: 20px;
+        div {
+          display: grid;
+          grid-auto-flow: column;
+          align-items: center;
+          column-gap: 10px;
+          padding: 10px 20px;
+          border-radius: 8px;
+          border: 1px solid var(--Personal-colors-main);
+
+          p {
+            text-align: end;
+            color: var(--Personal-colors-black);
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+          }
+        }
+      }
     }
   }
 
@@ -175,7 +197,6 @@
   display: grid;
   grid-auto-flow: row;
   justify-content: space-between;
-  width: 5%;
 
   svg {
     width: 30px;
