--- a/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
@@ -30,4 +30,15 @@
     display: grid;
     gap: 10px;
   }
+
+  .card__loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 30px;
+    width: 100%;
+    height: 100px;
+    background: #ffbaba;
+  }
 }
