feat: features btn for rtk queries

--- a/src/features/channelDescription/UI/styles.module.scss
+++ b/src/features/channelDescription/UI/styles.module.scss
@@ -20,7 +20,7 @@
 
     row-gap: 25px;
     background-image: url("/images/assets/channel_description.svg");
-    // background-size: cover;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 25px 30px 30px 30px;
