--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -30,7 +30,7 @@ body {
 .main_layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(100vh - 80px);
 
   header,
   footer {
