--- a/src/shared/ui/accountsLoader/ui/accountsLoader.module.scss
+++ b/src/shared/ui/accountsLoader/ui/accountsLoader.module.scss
@@ -1,28 +1,86 @@
+// .loader {
+//   width: 60px;
+//   height: 22px;
+//   border-radius: 40px;
+//   color: #514b82;
+//   border: 2px solid;
+//   position: relative;
+//   overflow: hidden;
+// }
+// .loader::before {
+//   content: "";
+//   position: absolute;
+//   margin: 2px;
+//   width: 14px;
+//   top: 0;
+//   bottom: 0;
+//   left: -20px;
+//   border-radius: inherit;
+//   background: currentColor;
+//   box-shadow: -10px 0 12px 3px currentColor;
+//   clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%, -30px 50%);
+//   animation: l14 1s infinite linear;
+// }
+// @keyframes l14 {
+//   100% {
+//     left: calc(100% + 20px);
+//   }
+// }
+
 .loader {
-  width: 60px;
-  height: 22px;
-  border-radius: 40px;
-  color: #514b82;
-  border: 2px solid;
+  width: 88px;
+  height: 12px;
+  border-radius: 100%;
+  --_g: no-repeat var(--Gradients-Gradient-1);
+  background:
+    var(--_g) 25% 0,
+    var(--_g) 75% 0;
+  background-size: 12px 12px;
   position: relative;
-  overflow: hidden;
+  animation: l24-0 1s linear infinite;
 }
-.loader::before {
+.loader:before {
   content: "";
   position: absolute;
-  margin: 2px;
-  width: 14px;
-  top: 0;
-  bottom: 0;
-  left: -20px;
-  border-radius: inherit;
-  background: currentColor;
-  box-shadow: -10px 0 12px 3px currentColor;
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%, -30px 50%);
-  animation: l14 1s infinite linear;
+  height: 12px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: var(--Gradients-Gradient-1);
+  inset: 0;
+  margin: auto;
+  animation: l24-1 1s cubic-bezier(0.5, 300, 0.5, -300) infinite;
 }
-@keyframes l14 {
+@keyframes l24-0 {
+  0%,
+  24% {
+    background-position:
+      25% 0,
+      75% 0;
+  }
+  40% {
+    background-position:
+      25% 0,
+      85% 0;
+  }
+  50%,
+  72% {
+    background-position:
+      25% 0,
+      75% 0;
+  }
+  90% {
+    background-position:
+      15% 0,
+      75% 0;
+  }
   100% {
-    left: calc(100% + 20px);
+    background-position:
+      25% 0,
+      75% 0;
+  }
+}
+@keyframes l24-1 {
+  100% {
+    transform: translate(0.1px);
   }
 }
