--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -21,6 +21,25 @@
     border-right: 1px solid var(--Card-separator);
     padding: 0 20px;
 
+    &__timer {
+      display: grid;
+      grid-template: 1fr / 2fr 1fr;
+      column-gap: 20px;
+
+      .timer {
+        display: grid;
+        align-content: center;
+        align-items: center;
+        justify-content: start;
+        p {
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+      }
+    }
+
     &__data {
       display: grid;
       grid-auto-flow: column;
