--- a/src/entities/priceCard/UI/styles.module.scss
+++ b/src/entities/priceCard/UI/styles.module.scss
@@ -6,11 +6,10 @@
   text-align: center;
   align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border: 2px solid var(--Personal-colors-White);
+  border: 2px solid var(--Personal-colors-Click);
 
   &:hover {
     border: 2px solid var(--Personal-colors-main);
-    // box-shadow: inset 0px 0px 0px 2px  var(--Personal-colors-main);
   }
 
   .title {
