--- a/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
+++ b/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
@@ -1,4 +1,10 @@
+.sticky_block {
+  min-height: 300px;
+}
+
 .wrapper {
+  position: sticky;
+  top: 0;
   display: grid;
   grid-auto-flow: row;
   align-items: center;
