--- a/src/features/bloggerPlatformCard/UI/styles.module.scss
+++ b/src/features/bloggerPlatformCard/UI/styles.module.scss
@@ -204,11 +204,22 @@
     }
   }
   .card__btn {
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 10px;
+    align-items: center;
+    justify-content: center;
     padding: 11px 0;
+    width: 100%;
+
+    color: #fff;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
+    line-height: normal;
     line-height: 0.75;
+    border-radius: 12px;
+    background: var(--Gradients-Gradient-1);
   }
 
   .platform__events {
@@ -218,18 +229,5 @@
     padding: 0 20px;
     border-radius: 12px;
     border-top: 1px solid var(--Gradients-Gradient-1);
-
-    // button {
-    //   border-radius: 8px;
-    //   border: 1px solid var(--Personal-colors-main);
-
-    //   p {
-    //     font-size: 20px;
-    //     font-style: normal;
-    //     font-weight: 500;
-    //     line-height: normal;
-    //     // padding: 10px;
-    //   }
-    // }
   }
 }
