--- a/src/features/calendar/UI/styles.module.scss
+++ b/src/features/calendar/UI/styles.module.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.open {
   display: grid;
   grid-template: 1fr / 1fr 3fr;
   justify-content: start;
@@ -11,7 +11,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    color: #4772e6;
+    color: var(--Personal-colors-main);
     // overflow-wrap: break-word;
   }
 
@@ -28,76 +28,42 @@
   padding: 35px;
   border-radius: 25px;
   background: #fff;
-  // animation: slideInFromRight 0.3s ease-in-out forwards, shake 0.3s ease-in-out 0.1s forwards;
-}
 
-.top {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 25px;
+  .top {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
 
-  p {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 12px; /* 50% */
-    color: #4772e6;
+    p {
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 12px; /* 50% */
+      color: var(--Personal-colors-main);
+    }
+
+    svg {
+      width: 20px;
+      height: 20px;
+    }
   }
 
-  svg {
-    width: 20px;
-    height: 20px;
-  }
-}
+  .bottom {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 20px;
+    align-items: center;
+    justify-content: stretch;
 
-.modal {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-
-  position: fixed;
-  z-index: 10;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(5px);
-}
-
-.modalContent {
-  display: grid;
-  align-items: center;
-  grid-auto-flow: row;
-  justify-content: center;
-  position: relative;
-  margin: 15% auto;
-  padding: 30px 60px;
-  // top: 50%;
-}
-
-.bottom {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 20px;
-  align-items: center;
-  justify-content: stretch;
-}
-
-.button {
-  padding: 10px;
-  border-radius: 8px;
-  border: 1px solid #4772e6;
-  background: #fff;
-  p {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    color: #4772e6;
+    .confirm {
+      padding: 10px;
+      font-style: normal;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: normal;
+    }
   }
 }
 
