--- a/src/features/managerProjectCard/UI/styles.module.scss
+++ b/src/features/managerProjectCard/UI/styles.module.scss
@@ -1,8 +1,9 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
+  row-gap: 20px;
   border-radius: 12px;
-  box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
+  box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
   // border: 1px solid var(--Personal-colors-main);
   padding-top: 20px;
   // height: 210px;
@@ -265,7 +266,6 @@
     border-left: 1px solid var(--Personal-colors-main);
     border-top: 1px solid var(--Personal-colors-main);
     row-gap: 10px;
-    margin-top: 20px;
     padding: 10px 10px 0 10px;
     border-radius: 12px 12px 0 0;
   }
@@ -311,13 +311,5 @@
   line-height: normal;
   line-height: 0.75;
   border-radius: 12px;
-}
-
-.more {
-  margin-top: 20px;
   background: var(--Gradients-Gradient-1);
-}
-
-.less {
-  color: var(--Personal-colors-main);
 }
