--- a/src/features/timeList/UI/styles.module.scss
+++ b/src/features/timeList/UI/styles.module.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.open {
   display: grid;
   grid-template: 1fr / 1fr 3.5fr;
   justify-content: start;
@@ -15,27 +15,6 @@
   }
 }
 
-.top {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 25px;
-
-  p {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 12px; /* 50% */
-    color: var(--Personal-colors-main);
-  }
-
-  svg {
-    width: 20px;
-    height: 20px;
-  }
-}
-
 .content {
   display: grid;
   align-items: center;
@@ -45,105 +24,85 @@
   padding: 35px;
   border-radius: 25px;
   background: #fff;
-}
 
-.timeList {
-  display: grid;
-  align-items: start;
-  grid-auto-flow: column;
-  column-gap: 35px;
-  justify-content: center;
-}
+  .top {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
 
-.leftColumn {
-  display: grid;
-  grid-auto-flow: row;
-  align-items: center;
-  row-gap: 20px;
-}
+    p {
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 12px; /* 50% */
+      color: var(--Personal-colors-main);
+    }
 
-.leftGrid {
-  display: grid;
-  grid-template-rows: repeat(6, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-  justify-content: center;
-}
-
-.rightColumn {
-  display: grid;
-  align-items: start;
-}
-
-.rightGrid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
-  justify-content: center;
-}
-
-.timeSlot {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  border-radius: 8px;
-  box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
-  padding: 10px;
-  cursor: pointer;
-  p {
-    color: var(--Personal-colors-black);
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 0.75;
-  }
-}
-
-.active {
-  background: var(--Gradients-Gradient-1);
-  box-shadow: none;
-  p {
-    color: var(--Personal-colors-White, #fff);
-  }
-}
-
-.active__in {
-  background: rgba(71, 113, 230, 0.5);
-  box-shadow: none;
-  p {
-    color: var(--Personal-colors-White, #fff);
-  }
-}
-
-.scroll {
-  overflow-y: scroll;
-  max-height: 290px;
-  padding-right: 5px;
-
-  &::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
-    // background-color: #ccc;
-    border-radius: 2px;
-    cursor: pointer;
+    svg {
+      width: 20px;
+      height: 20px;
+    }
   }
 
-  &::-webkit-scrollbar-thumb {
-    cursor: pointer;
-    background-color: #999;
-    border-radius: 2px;
+  .timeList {
+    display: grid;
+    align-items: start;
+    grid-auto-flow: row;
+    row-gap: 20px;
+
+    .leftGrid {
+      display: grid;
+      grid-template-rows: repeat(6, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 10px;
+      justify-content: center;
+
+      .timeSlot {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
+        padding: 10px;
+        cursor: pointer;
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 0.75;
+        }
+
+        &.active {
+          background: var(--Gradients-Gradient-1);
+          box-shadow: none;
+          p {
+            color: var(--Personal-colors-White, #fff);
+          }
+        }
+
+        &.active__in {
+          background: rgba(71, 113, 230, 0.5);
+          box-shadow: none;
+          p {
+            color: var(--Personal-colors-White, #fff);
+          }
+        }
+      }
+    }
+    .bottom {
+      display: grid;
+      align-items: center;
+
+      .confirm {
+        padding: 10px;
+        font-style: normal;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: normal;
+      }
+    }
   }
-}
-
-.bottom {
-  display: grid;
-  align-items: center;
-}
-
-.button {
-  padding: 10px;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: normal;
 }
