--- a/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogList/UI/styles.module.scss
@@ -41,4 +41,14 @@
     height: 100px;
     background: #ffbaba;
   }
+
+  .show_more {
+    margin: 10px auto;
+  }
+
+  .empty {
+    margin: 20px auto;
+    width: 50px;
+    height: 50px;
+  }
 }
