--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -279,7 +279,7 @@ body {
 
 .deactive {
   pointer-events: none;
-  background: var(--Inside-container);
+  // background: var(--Inside-container);
   // filter: grayscale(100%);
 }
 
