--- a/src/features/selectDescription/UI/styles.module.scss
+++ b/src/features/selectDescription/UI/styles.module.scss
@@ -40,7 +40,7 @@
     align-items: center;
     align-content: space-between;
     border-radius: 12px;
-    padding: 30px 20px;
+    padding: 20px;
     border: 1px solid var(--Inside-container);
     background: var(--Personal-colors-White);
     overflow: hidden;
