--- a/src/shared/ui/menuItem/styles.module.scss
+++ b/src/shared/ui/menuItem/styles.module.scss
@@ -17,7 +17,7 @@
       padding: 10px 20px;
       border-radius: 12px;
       cursor: pointer;
-      font-size: 12px;
+      font-size: 14px;
       font-style: normal;
       font-weight: 500;
       line-height: 1;
@@ -61,5 +61,8 @@
       background: var(--Gradients-Gradient-1);
       color: #fff;
     }
+  }
+
+  .row.faq {
   }
 }
