--- a/src/shared/ui/spinnerLoader/ui/styles.module.scss
+++ b/src/shared/ui/spinnerLoader/ui/styles.module.scss
@@ -18,3 +18,24 @@
     transform: rotate(1turn);
   }
 }
+
+.loader__small {
+  margin: 0 auto;
+  width: 30px;
+  padding: 4px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: var(--Gradients-Gradient-1);
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
