--- a/src/widgets/header/UI/dropdownMenu/styles.module.scss
+++ b/src/widgets/header/UI/dropdownMenu/styles.module.scss
@@ -68,7 +68,7 @@
 .burger__icon_btn {
   --width: 32px;
   --height: 32px;
-  --line-height: 2px;
+  --line-height: 1.5px;
   // --color: var(--Gradients-1);;
   --color: var(--Personal-colors-black);
 
@@ -85,6 +85,7 @@
   width: var(--width);
   height: var(--line-height);
   background-color: var(--color);
+  border-radius: 5px;
 
   &::before,
   &::after {
@@ -93,8 +94,9 @@
     position: absolute;
     left: 0;
     width: var(--width);
-    height: var(--line-height);
+    height: 2px;
     background-color: var(--color);
+    border-radius: 5px;
   }
 
   &::before {
