--- a/src/widgets/cta/UI/styles.module.scss
+++ b/src/widgets/cta/UI/styles.module.scss
@@ -22,7 +22,7 @@
         line-height: normal;
       }
 
-      &____subtitle {
+      &__subtitle {
         font-size: 24px;
         font-style: normal;
         font-weight: 700;
@@ -46,43 +46,4 @@
     }
   }
 
-  // .cta__row {
-  //   display: grid;
-  //   grid-auto-flow: column;
-
-  //   column-gap: 5px;
-  //   justify-content: space-between;
-
-  //   img {
-  //     max-width: 550px;
-  //   }
-  // }
-
-  // .cta__right {
-  //   max-width: 595px;
-  // }
-  // .cta__title {
-  //   color: var(--Personal-colors-black);
-  //   font-size: 44px;
-  //   font-style: normal;
-  //   font-weight: 700;
-  //   line-height: normal;
-  //   margin-bottom: 30px;
-  // }
-
-  // .cta__subtitle {
-  //   font-size: 24px;
-  //   font-style: normal;
-  //   font-weight: 700;
-  //   line-height: normal;
-  //   color: var(--Gradients-Gradient-1);
-  //   background-clip: text;
-  //   margin-bottom: 50px;
-  // }
-
-  // .options {
-  //   max-width: 450px;
-  //   color: var(--secondary-text);
-  //   margin-bottom: 46px;
-  // }
 }
