--- a/src/widgets/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/widgets/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -16,6 +16,7 @@
     li {
       padding: 10px 20px;
       border-radius: 12px;
+      border-left: 1px solid #000;
       cursor: pointer;
       font-size: 14px;
       font-style: normal;
