--- a/src/features/addToBasket/UI/styles.module.scss
+++ b/src/features/addToBasket/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .button {
   display: grid;
-  grid-auto-flow: column;
+  grid-template: 1fr / 1fr 3fr;
   align-items: center;
   text-align: center;
   justify-content: space-between;
@@ -10,6 +10,7 @@
     display: grid;
     grid-auto-flow: column;
     align-items: center;
+    justify-content: end;
     text-align: center;
     column-gap: 10px;
 
