feat: add skeleton Card in catalog and made little changes

--- a/src/entities/accommCard/UI/styles.module.scss
+++ b/src/entities/accommCard/UI/styles.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
 
   &.vencom {
-    color: #fff;
+    color: var(--Personal-colors-White);
     background: var(--Gradients-Gradient-1);
   }
 
