--- a/src/features/calendar/UI/styles.module.scss
+++ b/src/features/calendar/UI/styles.module.scss
@@ -27,7 +27,7 @@
   justify-content: center;
   padding: 35px;
   border-radius: 25px;
-  background: #fff;
+  background: var(--Personal-colors-White);
 
   .top {
     display: grid;
