--- a/src/features/calendar/UI/styles.scss
+++ b/src/features/calendar/UI/styles.scss
@@ -125,7 +125,7 @@
     //   background: #646269;
     //   border-radius: 6px;
     //   font-weight: bold;
-    //   color: #fff;
+    //   color: var(--Personal-colors-White);
 
     //   &:enabled:hover, &:enabled:focus {
     //     background: var(--Gradients-Gradient-1)33;
