--- a/src/features/managerNewProjectCard/UI/styles.module.scss
+++ b/src/features/managerNewProjectCard/UI/styles.module.scss
@@ -162,7 +162,7 @@
   padding: 11px 0;
   width: 100%;
 
-  color: #fff;
+  color: var(--Personal-colors-White);
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
