--- a/src/features/workWithUs/UI/styles.module.scss
+++ b/src/features/workWithUs/UI/styles.module.scss
@@ -20,7 +20,7 @@
     flex-shrink: 0;
     border-radius: 12px;
     border: 1px solid #4772e6;
-    background: #fff;
+    background: var(--Personal-colors-White);
 
     img {
       width: 80px;
