--- a/src/shared/ui/MyModal/styles.module.scss
+++ b/src/shared/ui/MyModal/styles.module.scss
@@ -20,7 +20,7 @@
     position: relative;
     margin: 15% auto;
     border-radius: 25px;
-    background: #fff;
+    background: var(--Personal-colors-White);
   }
 }
 
