--- a/src/widgets/addPlatformBlock/UI/platformParameters/UI/styles.module.scss
+++ b/src/widgets/addPlatformBlock/UI/platformParameters/UI/styles.module.scss
@@ -16,7 +16,7 @@
     background: var(--Gradients-Gradient-1);
 
     justify-content: start;
-    color: #fff;
+    color: var(--Personal-colors-White);
     p {
       font-size: 34px;
       font-style: normal;
