--- a/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
+++ b/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
@@ -12,7 +12,7 @@
   padding: 30px;
   border-radius: 20px;
   border: 0.5px solid rgba(0, 0, 0, 0.3);
-  background: #fff;
+  background: var(--Personal-colors-White);
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
 }
 
