--- a/src/widgets/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/widgets/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -60,7 +60,7 @@
     &.active {
       border-radius: 12px;
       background: var(--Gradients-Gradient-1);
-      color: #fff;
+      color: var(--Personal-colors-White);
     }
   }
 }
