--- a/src/widgets/howItWorks/UI/styles.module.scss
+++ b/src/widgets/howItWorks/UI/styles.module.scss
@@ -20,7 +20,7 @@
     overflow: hidden;
   }
   .how__title {
-    color: #fff;
+    color: var(--Personal-colors-White);
     font-size: 44px;
     font-style: normal;
     font-weight: 700;
