--- a/src/widgets/turnkey/UI/styles.module.scss
+++ b/src/widgets/turnkey/UI/styles.module.scss
@@ -36,7 +36,7 @@
   line-height: normal;
 }
 .turnkey__subtitle {
-  color: #fff;
+  color: var(--Personal-colors-White);
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
