--- a/src/widgets/wallet/UI/topUpCard/UI/styles.module.scss
+++ b/src/widgets/wallet/UI/topUpCard/UI/styles.module.scss
@@ -120,7 +120,7 @@
       padding: 25px;
       border-radius: 12px;
       border: 1px dashed #4772e6;
-      background: #fff;
+      background: var(--Personal-colors-White);
 
       .conditions__right {
         svg {
