--- a/src/features/barHistory/UI/styles.module.scss
+++ b/src/features/barHistory/UI/styles.module.scss
@@ -8,7 +8,7 @@
     minmax(20vw, 30vw);
   align-items: center;
   border-radius: 12px;
-  border: 1px solid var(--Containers, #8c8c8c);
+  border: 1px solid var(--Containers);
   background: var(--Personal-colors-White);
   padding: 10px 0;
   font-weight: 600;
