--- a/src/features/bloggerPlatformCardMenu/UI/styles.module.scss
+++ b/src/features/bloggerPlatformCardMenu/UI/styles.module.scss
@@ -8,7 +8,7 @@
   display: grid;
   grid-auto-flow: row;
   position: absolute;
-  background-color: #fff;
+  background-color: var(--Personal-colors-White);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 1;
   min-width: 200px;
