--- a/src/features/chatMessages/UI/styles.module.scss
+++ b/src/features/chatMessages/UI/styles.module.scss
@@ -94,7 +94,7 @@
 
   &.sender {
     background: #7d5ce9;
-    color: #fff;
+    color: var(--Personal-colors-White);
   }
 }
 .date {
@@ -102,7 +102,7 @@
   justify-content: center;
 
   p {
-    color: #fff;
+    color: var(--Personal-colors-White);
     padding: 5px 10px;
     background: rgba(71, 113, 230, 0.5);
     border-radius: 10px;
