--- a/src/features/formatList/UI/styles.module.scss
+++ b/src/features/formatList/UI/styles.module.scss
@@ -15,7 +15,7 @@
     justify-content: start;
     padding: 10px;
     border-radius: 10px;
-    background: #fff;
+    background: var(--Personal-colors-White);
     cursor: pointer;
 
     p {
@@ -40,7 +40,7 @@
   display: block;
   position: absolute;
   width: 100%;
-  background-color: #fff;
+  background-color: var(--Personal-colors-White);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 5px;
   overflow: hidden;
