--- a/src/features/historyCard/UI/styles.module.scss
+++ b/src/features/historyCard/UI/styles.module.scss
@@ -9,8 +9,8 @@
   align-items: center;
 
   border-radius: 12px;
-  border: 1px solid var(--Containers, #8c8c8c);
-  background: var(--Personal-colors-White, #fff);
+  border: 1px solid var(--Containers);
+  background: var(--Personal-colors-White);
   padding: 10px 0;
 
   div {
