--- a/src/features/managerProjectCard/UI/styles.module.scss
+++ b/src/features/managerProjectCard/UI/styles.module.scss
@@ -304,7 +304,7 @@
   padding: 11px 0;
   width: 100%;
 
-  color: #fff;
+  color: var(--Personal-colors-White);
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
