--- a/src/features/postButtons/UI/styles.module.scss
+++ b/src/features/postButtons/UI/styles.module.scss
@@ -63,16 +63,16 @@
       input {
         padding: 15px;
         border-radius: 8px;
-        border: 1px solid #8c8c8c;
+        border: 1px solid var(--Containers);
         background: var(--Personal-colors-White);
-        color: var(--Personal-colors-black, #000);
+        color: var(--Personal-colors-black);
         font-size: 10px;
         font-style: normal;
         font-weight: 500;
         line-height: 0.75;
 
         &::placeholder {
-          color: #8c8c8c;
+          color: var(--Containers);
         }
       }
     }
