--- a/src/features/selectOptions/UI/styles.module.scss
+++ b/src/features/selectOptions/UI/styles.module.scss
@@ -144,7 +144,7 @@
   .options {
     margin-top: 5px;
     position: absolute;
-    background-color: #fff;
+    background-color: var(--Personal-colors-White);
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
