--- a/src/features/showMore/ui/styles.module.scss
+++ b/src/features/showMore/ui/styles.module.scss
@@ -5,5 +5,6 @@
   text-align: center;
   font-weight: 600;
   background: var(--Gradients-Gradient-1);
-  color: #fff;
+  color: var(--Personal-colors-White);
+  cursor: pointer;
 }
