--- a/src/features/timeList/UI/styles.module.scss
+++ b/src/features/timeList/UI/styles.module.scss
@@ -23,7 +23,7 @@
   position: relative;
   padding: 35px;
   border-radius: 25px;
-  background: #fff;
+  background: var(--Personal-colors-White);
 
   .top {
     display: grid;
@@ -79,7 +79,7 @@
           background: var(--Gradients-Gradient-1);
           box-shadow: none;
           p {
-            color: var(--Personal-colors-White, #fff);
+            color: var(--Personal-colors-White);
           }
         }
 
@@ -87,7 +87,7 @@
           background: rgba(71, 113, 230, 0.5);
           box-shadow: none;
           p {
-            color: var(--Personal-colors-White, #fff);
+            color: var(--Personal-colors-White);
           }
         }
       }
