--- a/src/widgets/catalogBlock/UI/catalogSearch/UI/styles.module.scss
+++ b/src/widgets/catalogBlock/UI/catalogSearch/UI/styles.module.scss
@@ -14,7 +14,7 @@
 
   border-radius: 20px;
   border: 0.5px solid var(--Personal-colors-main);
-  background: #fff;
+  background: var(--Personal-colors-White);
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
 }
 
