--- a/src/widgets/createOrderBlock/UI/createOrderPayment/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderPayment/UI/styles.module.scss
@@ -31,11 +31,11 @@
         font-size: 44px;
         font-weight: bold;
         line-height: 1;
-        color: #fff;
+        color: var(--Personal-colors-White);
       }
 
       p {
-        color: #fff;
+        color: var(--Personal-colors-White);
         font-size: 34px;
         font-style: normal;
         font-weight: 600;
