--- a/src/widgets/createOrderBlock/UI/createOrderTop/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderTop/UI/styles.module.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     p {
-      color: #fff;
+      color: var(--Personal-colors-White);
       font-size: 44px;
       font-style: normal;
       font-weight: 600;
@@ -44,11 +44,11 @@
         font-size: 44px;
         font-weight: bold;
         line-height: 1;
-        color: #fff;
+        color: var(--Personal-colors-White);
       }
 
       p {
-        color: #fff;
+        color: var(--Personal-colors-White);
         font-size: 34px;
         font-style: normal;
         font-weight: 600;
@@ -70,7 +70,7 @@
 
       button {
         border-radius: 50%;
-        background: #fff;
+        background: var(--Personal-colors-White);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -85,10 +85,10 @@
         column-gap: 10px;
 
         input {
-          color: #fff;
+          color: var(--Personal-colors-White);
           align-items: center;
           &::placeholder {
-            color: #fff;
+            color: var(--Personal-colors-White);
           }
         }
       }
