--- a/src/widgets/header/UI/lang/styles.module.scss
+++ b/src/widgets/header/UI/lang/styles.module.scss
@@ -23,7 +23,7 @@
     display: block;
     position: absolute;
     left: 0;
-    background-color: #fff;
+    background-color: var(--Personal-colors-White);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
     border-radius: 12px;
