--- a/src/widgets/header/UI/profile/styles.module.scss
+++ b/src/widgets/header/UI/profile/styles.module.scss
@@ -13,7 +13,7 @@
   margin-top: 5px;
   right: 0;
   color: var(--Personal-colors-black);
-  background-color: #fff;
+  background-color: var(--Personal-colors-White);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 1;
   width: 170px;
