--- a/src/widgets/header/UI/wallet/styles.module.scss
+++ b/src/widgets/header/UI/wallet/styles.module.scss
@@ -5,7 +5,7 @@
   transition:
     background 0.3s ease,
     color 0.3s ease; /* Плавная смена цвета */
-  color: #fff;
+  color: var(--Personal-colors-White);
 
   cursor: pointer;
   position: relative;
@@ -45,7 +45,7 @@
     display: block;
     position: absolute;
     left: 0;
-    background-color: #fff;
+    background-color: var(--Personal-colors-White);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
     min-width: 200px;
