--- a/src/widgets/sideBar/UI/styles.module.scss
+++ b/src/widgets/sideBar/UI/styles.module.scss
@@ -57,7 +57,7 @@
           justify-content: center;
           align-items: center;
           align-self: stretch;
-          color: #fff;
+          color: var(--Personal-colors-White);
           background: var(--Gradients-Gradient-1);
           border-radius: 50%;
         }
