--- a/src/widgets/wallet/UI/paymentData/UI/styles.module.scss
+++ b/src/widgets/wallet/UI/paymentData/UI/styles.module.scss
@@ -3,8 +3,8 @@
   grid-auto-flow: row;
   row-gap: 30px;
   border-radius: 40px;
-  border: 1px solid var(--Inside-container, #bdbdbd);
-  background: var(--Personal-colors-White, #fff);
+  border: 1px solid var(--Inside-container);
+  background: var(--Personal-colors-White);
   padding: 50px;
   // width: 100%;
 }
