--- a/src/features/postDispay/UI/styles.module.scss
+++ b/src/features/postDispay/UI/styles.module.scss
@@ -1,22 +1,133 @@
-.wrapper {
-  height: 100%;
-  border-radius: 25px;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
-  background: #fff;
-  padding: 15px 20px;
+.screen_wrapper {
+  .screen {
+    position: relative;
+    overflow: hidden;
 
-  .content {
-    display: grid;
-    align-items: start;
-    align-content: start;
-    height: 100%;
-
-    .current_post {
-      height: 100%;
-      width: 100%;
-      overflow: auto;
+    .time {
+      position: absolute;
+      top: 27px;
+      left: 60px;
+      z-index: 1;
+      font-weight: 500;
+      color: #fff;
       font-size: 14px;
-      word-wrap: break-word;
+    }
+
+    .statusbar {
+      position: absolute;
+      top: 30px;
+      right: 43px;
+      z-index: 1;
+      width: 20%;
+    }
+
+    .dynamic {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translate(-50%);
+      z-index: 1;
+      width: 30%;
+    }
+
+    .back {
+      position: absolute;
+      top: 60px;
+      left: 20px;
+      z-index: 1;
+      width: 15%;
+    }
+
+    .channel {
+      display: grid;
+      justify-items: center;
+      position: absolute;
+      top: 56px;
+      left: 50%;
+      transform: translate(-50%);
+      z-index: 1;
+
+      &__name {
+        font-size: 12px;
+        font-weight: 500;
+        color: #fff;
+      }
+
+      &__subs {
+        font-size: 10px;
+        font-weight: 400;
+        color: #909090;
+      }
+    }
+
+    .avatar {
+      position: absolute;
+      top: 55px;
+      right: 20px;
+      z-index: 1;
+      width: 30px;
+      height: 30px;
+      border-radius: 100%;
+      background: #fff;
+    }
+
+    .unmute {
+      position: absolute;
+      bottom: 40px;
+      left: 50%;
+      transform: translate(-50%);
+      z-index: 1;
+      font-size: 14px;
+      font-weight: 500;
+      color: #1269a3;
+    }
+
+    .mockup {
+      padding: 5px;
+    }
+
+    .display {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 97.5%;
+      width: 93.7%;
+      padding: 0px 10px;
+      padding-top: 80px;
+      padding-bottom: 60px;
+      background: #142530;
+      margin: 9px 11px;
+      border-radius: 53.5px;
+
+      .content {
+        height: 100%;
+        background: url("/src/shared/assets/img/tgbg.png") no-repeat;
+        background-size: cover;
+        padding: 5px 0px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+
+        .current_post {
+          height: 100%;
+          width: 100%;
+          font-size: 14px;
+          padding: 0px 5px;
+          color: #fff;
+        }
+
+        .stroke {
+          position: absolute;
+          bottom: 10px;
+          left: 50%;
+          transform: translate(-50%);
+          width: 10vw;
+          max-width: 130px;
+          border-bottom: 4px solid #c9c9c9;
+          border-radius: 20px;
+        }
+      }
     }
   }
 }
