--- a/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
@@ -66,7 +66,7 @@
           display: grid;
           grid-template: 1fr 1fr / 1fr;
           row-gap: 30px;
-          height: 30vw;
+          // height: 30vw;
           min-height: 500px;
 
           button {
@@ -92,7 +92,7 @@
 
         .display {
           position: relative;
-          height: 30vw;
+          // height: 30vw;
           min-height: 500px;
 
           .continue {
