feat: merge and fix conflicts

--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -362,3 +362,9 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.hyperlink {
+  color: blue;
+  text-decoration: underline;
+  font-weight: bold;
+}
