--- a/src/features/postDispay/UI/styles.module.scss
+++ b/src/features/postDispay/UI/styles.module.scss
@@ -1,72 +1,22 @@
 .wrapper {
-  width: 300px;
-  height: 600px;
+  height: 100%;
+  border-radius: 25px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
+  background: #fff;
+  padding: 15px 20px;
 
-  display: grid;
-  grid-auto-flow: row;
-  align-items: center;
-  text-align: center;
-  align-content: space-between;
-
-  border-radius: 15px;
-  border: 1px solid var(--Containers);
-  background: var(--Personal-colors-White);
-
-  padding: 25px 30px;
-
-  p {
-    color: var(--Text-sample, #a3a0a0);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-}
-
-.middle {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 30px;
-  align-items: center;
-  justify-content: space-between;
-
-  div {
+  .content {
     display: grid;
-    grid-auto-flow: column;
-    justify-content: center;
-  }
+    align-items: start;
+    align-content: start;
+    height: 100%;
 
-  span {
-    color: var(--Text-sample, #a3a0a0);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-}
-
-.bottom {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 15px;
-  justify-content: center;
-
-  div {
-    display: grid;
-    justify-content: center;
-  }
-}
-
-.stroke {
-  width: 100px;
-  border-bottom: 2px solid var(--Containers);
-}
-
-.button {
-  border-radius: 8px;
-  border: 1px solid #4772e6;
-  background: var(--Personal-colors-White);
-  p {
-    color: #4772e6;
+    .current_post {
+      height: 100%;
+      width: 100%;
+      overflow: auto;
+      font-size: 14px;
+      word-wrap: break-word;
+    }
   }
 }
