--- a/src/shared/styles/reset.scss
+++ b/src/shared/styles/reset.scss
@@ -13,17 +13,17 @@
 
 /* Links */
 
-a,
-a:link,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
+// a,
+// a:link,
+// a:visited {
+//   text-decoration: none;
+//   color: inherit;
+// }
 
-a:hover {
-  text-decoration: none;
-  color: inherit;
-}
+// a:hover {
+//   text-decoration: none;
+//   color: inherit;
+// }
 
 /* Common */
 
