--- a/src/widgets/createOrderBlock/UI/createOrderTop/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderTop/UI/styles.module.scss
@@ -60,7 +60,8 @@
       margin-left: 120px;
       padding-left: 20px;
       display: grid;
-      grid-auto-flow: column;
+      grid-template: 1fr / 1fr 50px;
+      gap: 10px;
       align-items: center;
       max-width: 450px;
       justify-content: space-between;
@@ -79,7 +80,7 @@
       }
       .input {
         display: grid;
-        grid-auto-flow: column;
+        grid-template: 1fr / 20px 1fr;
         align-items: center;
         justify-content: start;
         column-gap: 10px;
